# loom

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/chat/: ChatContext.tsx  ChatSidebar.tsx  openChat.ts
dashboard/src/components/: ChatsView.tsx  PrBadges.tsx  ServiceLogsPanel.tsx  TaskCard.tsx  TasksView.tsx
dashboard/src/term/: TerminalView.tsx
docs/: ARCHITECTURE.md  CLAUDE_AGENT_SDK_NOTES.md  DECISIONS.md  SESSIONS_DESIGN.md
loom/: __init__.py  cli.py  models.py
loom/core/: agents.py  claude_session.py  config.py  doctor.py  github.py  logs.py  manager.py  monitor.py  perf.py  ports.py  process.py  pty_server.py  registry.py  repos.py  runtime.py  sessions.py  terminals.py  tests.py  worktree.py
loom/server/: api.py  app.py
projects/: example.loom.yaml
