[project]
name = "loom-orchestrator"
version = "0.1.0"
description = "Parallel git-worktree dev orchestrator for Claude Code — run many PRs/tasks at once, each isolated."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
loom = "loom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.ruff]
line-length = 110
target-version = "py312"
